# bzchallenge

./: CMakeLists.txt  README.md  prices.json  run_all_tests
include/: analyzer.hpp  common.hpp  data_series.hpp  report.hpp  url_reader.hpp
main/: main.cpp
src/: CMakeLists.txt  analyzer.cpp  data_series.cpp  report.cpp  url_reader.cpp
test/: test_analyzer.cpp  test_data_series.cpp  test_report.cpp  test_url_reader.cpp
